img_position_change

--- a/_posts/2019-06-10-Problem1.md
+++ b/_posts/2019-06-10-Problem1.md
@@ -11,11 +11,11 @@ tags:
   - problems
 comments: false
 published: true
-image: ../img/moon.jpg
+image: /img/moon.jpg
 ---
 
 
-- 中文短评 $\Rightarrow$ IMDb
+- 中文短评 ——> IMDb
 
 ### 根据短评生成向量
 - 难点：构建合适的模型，体现数据特征
