--- a/_posts/2019-6-26-RNN.md
+++ b/_posts/2019-6-26-RNN.md
@@ -11,7 +11,7 @@ tags:
   - Deep Learning--Sequence model
 comments: false
 published: true
-image: /img/RNN_model.jpg
+image: /img/cover1.jpg
 ---
 
 # Recurrent Neural Networks
