--- a/_posts/2019-6-28-GRU.md
+++ b/_posts/2019-6-28-GRU.md
@@ -11,7 +11,7 @@ tags:
   - Deep Learning--Sequence model
 comments: false
 published: true
-image: /img/RNN_unit.jpg, /img/GRU_unit.jpg
+image: /img/cover2.jpg
 ---
 
 # Gated Recurrent Unit
